--- a/style.css
+++ b/style.css
@@ -113,6 +113,7 @@ bottom: 30px;
 .video-container{
     background-color: #363E97;
     padding-top: 35px;
+    padding-bottom: 90px;
    
 }
 
@@ -156,7 +157,8 @@ padding-left: 15px;
 
 .news-container {
     background-color: rgb(143, 183, 202);
-    padding-top: 35px;        
+    padding-top: 35px;   
+    padding-bottom: 90px;     
 }
 
 caption {
